Fix media query syntax

--- a/less/base/_tables.less
+++ b/less/base/_tables.less
@@ -65,7 +65,7 @@
         &.table-fill-odd tbody tr:nth-child(odd) { background-color: #f9f9f9; }
     }
 
-    .breakpoint(extra-small) {
+    @media @extra-small {
         table.table {
             width: auto;
             
