--- a/less/generic/_mixins.less
+++ b/less/generic/_mixins.less
@@ -10,7 +10,7 @@
     @rem-value: (@font-size / @base-font-size) * 1rem;
     @line-height-value: ceil((@font-size / @base-line-height) * (@base-line-height / @font-size));
 
-    font-size: ~"@{px-value}px";
+    font-size: ~"@{px-value}";
     font-size: @rem-value;
 
     .line-height(@boolean) when (@boolean = true) {
@@ -46,15 +46,15 @@
 //    `@media @medium { styles here }`
 // 
 // 
-@extra-small:  ~"only screen and (max-width:"@extra-small-start")";
-@small: 	   ~"only screen and (min-width:"@small-start")";
-@medium: 	   ~"only screen and (min-width:"@medium-start")";
-@large: 	   ~"only screen and (min-width:"@large-start")";
-@extra-large:  ~"only screen and (min-width:"@extra-large-start")";
-@high-density: ~"only screen and (-webkit-min-device-pixel-ratio: 1.5)",
-               ~"only screen and (min--moz-device-pixel-ratio: 1.5)",
-               ~"only screen and (-o-min-device-pixel-ratio: 3/2)",
-               ~"only screen and (min-device-pixel-ratio: 1.5)";
+@extra-small:  ~"(max-width: @{extra-small-start})";
+@small: 	   ~"(min-width: @{small-start})";
+@medium: 	   ~"(min-width: @{medium-start})";
+@large: 	   ~"(min-width: @{large-start})";
+@extra-large:  ~"(min-width: @{extra-large-start})";
+@high-density: ~"(-webkit-min-device-pixel-ratio: 1.5)",
+               ~"(min--moz-device-pixel-ratio: 1.5)",
+               ~"(-o-min-device-pixel-ratio: 3/2)",
+               ~"(min-device-pixel-ratio: 1.5)";
 
 
 //
