--- a/less/objects/_buttons.less
+++ b/less/objects/_buttons.less
@@ -76,7 +76,7 @@
         }
     }
 
-    .breakpoint(small) {
+    @media @small {
         .btn {
             display: inline-block;
             *display: inline;
@@ -265,7 +265,7 @@
         }
     }
 
-    .breakpoint(small) {
+    @media @small {
         .btn-extra-small .caret, 
         .btn-small .caret {
             border-top: 4px solid;
