--- a/less/objects/_dropdowns.less
+++ b/less/objects/_dropdowns.less
@@ -86,7 +86,7 @@
         }
     }
 
-    .breakpoint(small) {
+    @media @small {
         .dropdown {
             .dropdown-menu { width: 200px; }
             
