--- a/less/objects/_navigation.less
+++ b/less/objects/_navigation.less
@@ -252,7 +252,7 @@
         .dropdown .dropdown-menu { top: 100%; }
     }
 
-    .breakpoint(small) {
+    @media @small {
         .nav-vertical .dropdown .dropdown-menu {
             left: 100%;
             top: 0;
