--- a/less/generic/_helper.less
+++ b/less/generic/_helper.less
@@ -25,7 +25,7 @@
     // Displaying content
     .inline { display: block; }
 
-    .breakpoint(extra-small) { .inline { display: inline; } }
+    @media @extra-small { .inline { display: inline; } }
 
     .show {
         display: block;
