--- a/less/objects/_groups.less
+++ b/less/objects/_groups.less
@@ -26,7 +26,7 @@
         & .icon { .font-size(14px); }
     }
 
-    .breakpoint(small) {
+    @media @small {
         .group-item {
             .font-size(@base-font-size); 
             padding: 6px 12px;
@@ -92,7 +92,7 @@
         }
     }
 
-    .breakpoint(small) {
+    @media @small {
         .group .caret {
             border-top: 5px solid;
             border-right: 5px solid transparent;
