--- a/less/generic/_print.less
+++ b/less/generic/_print.less
@@ -1,4 +1,4 @@
-.pring(@boolean) when (@boolean = true) {
+.print(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $PRINT
     //------------------------------------//
@@ -10,14 +10,14 @@
             color: black !important;
             text-shadow: none !important;
             
-            .vendor(filter, none !important);
+            .vendor(filter, none) !important;
             
             &:before, &:after {
                 background: transparent !important;
                 color: black !important;
                 text-shadow: none !important;
                 
-                .vendor(filter, none !important);
+                .vendor(filter, none) !important;
             }
         }
         
