Escape characters to avoid function call

--- a/less/objects/_wells.less
+++ b/less/objects/_wells.less
@@ -75,7 +75,7 @@
     // Close icon
     .close {
         color: #000;
-        filter: alpha(opacity = 20);
+        filter: ~"alpha(opacity = 20)";
         float: right;
         .font-size(22px); 
         font-weight: bold;
@@ -84,7 +84,7 @@
         &:hover, &:focus {
             color: #000;
             cursor: pointer;
-            filter: alpha(opacity = 50);
+            filter: ~"alpha(opacity = 50)";
             opacity: .5;
             text-decoration: none;
             
