--- a/less/base/_main.less
+++ b/less/base/_main.less
@@ -7,7 +7,7 @@
     @font-size: ((@base-font-size/16px) * 1em);
     @line-height-integer: unit(@line-height-ratio);
     
-    @if @global-border-box == true {
+    .border-box(@boolean) when (@boolean = true) {
         *{
             &,
             &:before,
@@ -16,6 +16,8 @@
             }
         }
     }
+    
+    .border-box(@global-border-box); 
 
     html, 
     body {
