--- a/css/concise.css
+++ b/css/concise.css
@@ -10,7 +10,11 @@
  */
 html {
   font-size: 100%;
-  -webkit-property: 100%;
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -o-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 article,
 aside,
@@ -93,7 +97,11 @@ hr {
   border-width: 1px 0 0;
   clear: both;
   height: 0;
-  -webkit-property: content-box;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  -ms-box-sizing: content-box;
+  -o-box-sizing: content-box;
+  box-sizing: content-box;
 }
 pre {
   white-space: pre;
@@ -105,10 +113,9 @@ kbd,
 pre,
 samp {
   font-family: monospace, monospace;
-  _font-family: 'courier new', monospace;
   font-size: 16px;
   font-size: 1rem;
-  line-height: 1;
+  line-height: 1.5;
 }
 q {
   quotes: none;
@@ -130,7 +137,6 @@ textarea {
   font: inherit;
   margin: 0;
   vertical-align: baseline;
-  *vertical-align: middle;
 }
 button {
   overflow: visible;
@@ -145,7 +151,6 @@ input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button;
   cursor: pointer;
-  *overflow: visible;
 }
 button[disabled],
 html input[disabled] {
@@ -170,7 +175,11 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 input[type="search"] {
   -webkit-appearance: textfield;
-  -webkit-property: content-box;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  -ms-box-sizing: content-box;
+  -o-box-sizing: content-box;
+  box-sizing: content-box;
 }
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
@@ -183,7 +192,6 @@ legend {
   border: 0;
   padding: 0;
   white-space: normal;
-  *margin-left: -7px;
 }
 textarea {
   overflow: auto;
@@ -248,7 +256,11 @@ dd {
 *,
 *:before,
 *:after {
-  -webkit-property: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
 }
 html,
 body {
@@ -318,12 +330,12 @@ small,
 .small {
   font-size: 12px;
   font-size: 0.75rem;
-  line-height: 1;
+  line-height: 2;
 }
 .micro {
   font-size: 10px;
   font-size: 0.625rem;
-  line-height: 1;
+  line-height: 2.4;
 }
 address {
   font-style: normal;
@@ -376,38 +388,38 @@ h2,
 .h2 {
   font-size: 20px;
   font-size: 1.25rem;
-  line-height: 1;
+  line-height: 1.2;
 }
 h3,
 .h3 {
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1;
+  line-height: 1.33333333;
 }
 h4,
 .h4 {
   font-size: 16px;
   font-size: 1rem;
-  line-height: 1;
+  line-height: 1.5;
 }
 h5,
 .h5 {
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1;
+  line-height: 1.71428571;
 }
 h6,
 .h6 {
   font-size: 12px;
   font-size: 0.75rem;
-  line-height: 1;
+  line-height: 2;
 }
 @media (min-width: 48em) {
   h1,
   .h1 {
     font-size: 32px;
     font-size: 2rem;
-    line-height: 1;
+    line-height: 1.5;
   }
   h2,
   .h2 {
@@ -419,25 +431,25 @@ h6,
   .h3 {
     font-size: 20px;
     font-size: 1.25rem;
-    line-height: 1;
+    line-height: 1.2;
   }
   h4,
   .h4 {
     font-size: 18px;
     font-size: 1.125rem;
-    line-height: 1;
+    line-height: 1.33333333;
   }
   h5,
   .h5 {
     font-size: 16px;
     font-size: 1rem;
-    line-height: 1;
+    line-height: 1.5;
   }
   h6,
   .h6 {
     font-size: 14px;
     font-size: 0.875rem;
-    line-height: 1;
+    line-height: 1.71428571;
   }
 }
 @media (min-width: 60em) {
@@ -445,13 +457,13 @@ h6,
   .h1 {
     font-size: 36px;
     font-size: 2.25rem;
-    line-height: 1;
+    line-height: 1.33333333;
   }
   h2,
   .h2 {
     font-size: 30px;
     font-size: 1.875rem;
-    line-height: 1;
+    line-height: 1.6;
   }
   h3,
   .h3 {
@@ -463,19 +475,19 @@ h6,
   .h4 {
     font-size: 20px;
     font-size: 1.25rem;
-    line-height: 1;
+    line-height: 1.2;
   }
   h5,
   .h5 {
     font-size: 16px;
     font-size: 1rem;
-    line-height: 1;
+    line-height: 1.5;
   }
   h6,
   .h6 {
     font-size: 14px;
     font-size: 0.875rem;
-    line-height: 1;
+    line-height: 1.71428571;
   }
 }
 h1 a,
@@ -521,18 +533,18 @@ h6 small,
 .mega {
   font-size: 40px;
   font-size: 2.5rem;
-  line-height: 1;
+  line-height: 1.2;
 }
 .kilo {
   font-size: 32px;
   font-size: 2rem;
-  line-height: 1;
+  line-height: 1.5;
 }
 @media (min-width: 48em) {
   .giga {
     font-size: 64px;
     font-size: 4rem;
-    line-height: 1;
+    line-height: 1.125;
   }
   .mega {
     font-size: 48px;
@@ -542,19 +554,19 @@ h6 small,
   .kilo {
     font-size: 32px;
     font-size: 2rem;
-    line-height: 1;
+    line-height: 1.5;
   }
 }
 @media (min-width: 70em) {
   .giga {
     font-size: 80px;
     font-size: 5rem;
-    line-height: 1;
+    line-height: 1.2;
   }
   .mega {
     font-size: 64px;
     font-size: 4rem;
-    line-height: 1;
+    line-height: 1.125;
   }
   .kilo {
     font-size: 48px;
@@ -576,7 +588,7 @@ h6 small,
   .kilo {
     font-size: 64px;
     font-size: 4rem;
-    line-height: 1;
+    line-height: 1.125;
   }
 }
 blockquote {
@@ -592,7 +604,7 @@ blockquote cite {
   display: block;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1;
+  line-height: 1.71428571;
 }
 blockquote cite:before {
   content: "\2014 \0020";
@@ -801,7 +813,11 @@ textarea {
   height: 37px;
   padding: 5px;
   width: 100%;
-  -webkit-property: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
 }
 @media (max-width: 30em) {
   input,
@@ -860,7 +876,7 @@ fieldset legend {
   font-weight: bold;
   font-size: 13px;
   font-size: 0.8125rem;
-  line-height: 1;
+  line-height: 1.84615385;
   padding: 0 10px;
 }
 input.required:required:valid,
@@ -1024,7 +1040,11 @@ form.border-radius .prepend .adjoined,
   display: table;
 }
 [class*='#{@column-prefix}'] {
-  -webkit-property: padding-box !important;
+  -webkit-background-clip: padding-box !important;
+  -moz-background-clip: padding-box !important;
+  -ms-background-clip: padding-box !important;
+  -o-background-clip: padding-box !important;
+  background-clip: padding-box !important;
 }
 [class*='#{@column-prefix}'].right {
   float: right;
@@ -1227,8 +1247,21 @@ form.border-radius .prepend .adjoined,
   white-space: nowrap;
   width: 100%;
   -webkit-touch-callout: none;
-  -webkit-property: none;
-  -webkit-property: all 0.3s;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  -webkit-user-drag: none;
+  -moz-user-drag: none;
+  -ms-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
 }
 .btn::-moz-focus-inner {
   padding: 0;
@@ -1284,7 +1317,7 @@ form.border-radius .prepend .adjoined,
   input.btn-extra-small {
     font-size: 11px;
     font-size: 0.6875rem;
-    line-height: 1;
+    line-height: 2.18181818;
     padding: 5px 16px;
   }
   .btn-small,
@@ -1293,7 +1326,7 @@ form.border-radius .prepend .adjoined,
   input.btn-small {
     font-size: 12px;
     font-size: 0.75rem;
-    line-height: 1;
+    line-height: 2;
     padding: 10px 32px;
   }
   .btn-large,
@@ -1488,13 +1521,13 @@ p.group-item {
 p.group-item .icon {
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1;
+  line-height: 1.71428571;
 }
 @media (min-width: 48em) {
   .group-item {
     font-size: 16px;
     font-size: 1rem;
-    line-height: 1;
+    line-height: 1.5;
     padding: 6px 12px;
   }
 }
@@ -1502,7 +1535,11 @@ p.group-item .icon {
   background-color: #f9f9f9;
 }
 .group-item:active {
-  -webkit-property: inset 0 1px 1px rgba(100, 100, 100, 0.1);
+  -webkit-box-shadow: inset 0 1px 1px rgba(100, 100, 100, 0.1);
+  -moz-box-shadow: inset 0 1px 1px rgba(100, 100, 100, 0.1);
+  -ms-box-shadow: inset 0 1px 1px rgba(100, 100, 100, 0.1);
+  -o-box-shadow: inset 0 1px 1px rgba(100, 100, 100, 0.1);
+  box-shadow: inset 0 1px 1px rgba(100, 100, 100, 0.1);
 }
 .group-item.active,
 .group-item .active {
@@ -1530,7 +1567,7 @@ p.group-item .icon {
 .group-item.dropdown .dropdown-menu li a {
   font-size: 12px;
   font-size: 0.75rem;
-  line-height: 1;
+  line-height: 2;
   padding: 4px 7px;
   width: auto;
 }
@@ -1571,7 +1608,11 @@ p.group-item .icon {
   right: 0;
   text-transform: none;
   z-index: 99999;
-  -webkit-property: all 0.3s ease-in;
+  -webkit-transition: all 0.3s ease-in;
+  -moz-transition: all 0.3s ease-in;
+  -ms-transition: all 0.3s ease-in;
+  -o-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
 }
 .dropdown .dropdown-menu a {
   text-decoration: none;
@@ -1605,7 +1646,11 @@ p.group-item .icon {
 .dropdown .dropdown-menu li {
   display: block;
   padding: 5px 10px;
-  -webkit-property: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
 }
 .dropdown .dropdown-menu.border-radius li:first-of-type {
   border-radius: 4px 4px 0 0;
@@ -1626,7 +1671,7 @@ p.group-item .icon {
   font-size: 0.9rem;
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1;
+  line-height: 1.71428571;
   margin: 12px 0 0;
   padding: 0 0 0 9px;
 }
@@ -1916,7 +1961,11 @@ nav .dropdown li {
   line-height: 1;
   text-align: right;
   text-transform: uppercase;
-  -webkit-property: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 .naver .naver-wrapper {
   height: auto;
@@ -1998,7 +2047,7 @@ nav .dropdown li {
 .breadcrumbs {
   font-size: 13px;
   font-size: 0.8125rem;
-  line-height: 1;
+  line-height: 1.84615385;
   margin: 12px 0;
   padding: 5px 15px 5px 0;
 }
@@ -2060,7 +2109,7 @@ nav .dropdown li {
 .well .pre.well {
   font-size: 14px;
   font-size: 0.875rem;
-  line-height: 1;
+  line-height: 1.71428571;
   padding: 10px 15px;
 }
 .well header h1,
@@ -2127,7 +2176,7 @@ nav .dropdown li {
   float: right;
   font-size: 22px;
   font-size: 1.375rem;
-  line-height: 1;
+  line-height: 1.09090909;
   font-weight: bold;
   opacity: .2;
 }
@@ -2138,7 +2187,11 @@ nav .dropdown li {
   filter: alpha(opacity = 50);
   opacity: .5;
   text-decoration: none;
-  -webkit-property: all 0.2s linear;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
 button.close {
   background: transparent;
@@ -2155,7 +2208,7 @@ button.close {
   color: #fff;
   font-size: 12px;
   font-size: 0.75rem;
-  line-height: 1;
+  line-height: 2;
   font-weight: bold;
   padding: 3px 7px;
   text-align: center;
@@ -2204,8 +2257,16 @@ a.badge:focus {
   position: relative;
   text-align: center;
   width: 100%;
-  -webkit-property: inset 0 1px 1px rgba(100, 100, 100, 0.1);
-  -webkit-property: initial;
+  -webkit-box-shadow: inset 0 1px 1px rgba(100, 100, 100, 0.1);
+  -moz-box-shadow: inset 0 1px 1px rgba(100, 100, 100, 0.1);
+  -ms-box-shadow: inset 0 1px 1px rgba(100, 100, 100, 0.1);
+  -o-box-shadow: inset 0 1px 1px rgba(100, 100, 100, 0.1);
+  box-shadow: inset 0 1px 1px rgba(100, 100, 100, 0.1);
+  -webkit-box-sizing: initial;
+  -moz-box-sizing: initial;
+  -ms-box-sizing: initial;
+  -o-box-sizing: initial;
+  box-sizing: initial;
 }
 .progress-small {
   font-size: 9px;
@@ -2253,13 +2314,21 @@ a.badge:focus {
   right: 0;
   top: 0;
   z-index: 1;
-  -webkit-property: 50px 50px;
+  -webkit-background-size: 50px 50px;
+  -moz-background-size: 50px 50px;
+  -ms-background-size: 50px 50px;
+  -o-background-size: 50px 50px;
+  background-size: 50px 50px;
   background-image: -webkit-gradient(linear, 0 0, 100% 100%, color-stop(0.25, rgba(255, 255, 255, 0.2)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.2)), color-stop(0.75, rgba(255, 255, 255, 0.2)), color-stop(0.75, transparent), to(transparent));
   background-image: -moz-linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
 }
 .progress-striped.progress-animate > span:after,
 .progress-striped.progress-animate > span > span {
-  -webkit-property: move 2s linear infinite;
+  -webkit-animation: move 2s linear infinite;
+  -moz-animation: move 2s linear infinite;
+  -ms-animation: move 2s linear infinite;
+  -o-animation: move 2s linear infinite;
+  animation: move 2s linear infinite;
 }
 @-webkit-keyframes move {
   0% {
@@ -2483,14 +2552,22 @@ img.full {
     background: transparent !important;
     color: black !important;
     text-shadow: none !important;
-    -webkit-property: none !important;
+    -webkit-filter: none !important;
+    -moz-filter: none !important;
+    -ms-filter: none !important;
+    -o-filter: none !important;
+    filter: none !important;
   }
   *:before,
   *:after {
     background: transparent !important;
     color: black !important;
     text-shadow: none !important;
-    -webkit-property: none !important;
+    -webkit-filter: none !important;
+    -moz-filter: none !important;
+    -ms-filter: none !important;
+    -o-filter: none !important;
+    filter: none !important;
   }
   body {
     background-color: #fff;
