--- a/less/generic/_mixins.less
+++ b/less/generic/_mixins.less
@@ -46,7 +46,7 @@
 //    `@media @medium { styles here }`
 // 
 // 
-@extra-small:  ~"(max-width: @{extra-small-start})";
+@extra-small:  ~"(min-width: @{extra-small-start})";
 @small: 	   ~"(min-width: @{small-start})";
 @medium: 	   ~"(min-width: @{medium-start})";
 @large: 	   ~"(min-width: @{large-start})";
