--- a/less/base/_grid.less
+++ b/less/base/_grid.less
@@ -12,7 +12,7 @@
         }
     }
 
-    [class*='#{@column-prefix}'] {
+    [class*=@{column-prefix}] {
         .vendor(background-clip, padding-box) !important;
         
         &.right { float: right; }
@@ -21,9 +21,9 @@
     }
 
     @media @small {
-        [class*='#{@column-prefix}'] { float: left; }
+        [class*=@{column-prefix}] { float: left; }
         
-        .gutters [class*='#{@column-prefix}'] {
+        .gutters [class*=@{column-prefix}] {
             margin-left: @gutters;
             
             &:first-child { margin-left: 0; }
@@ -57,16 +57,16 @@
 
     // Non-responsive grid
     .non-responsive {
-        [class*='#{@column-prefix}'] {
+        [class*=@{column-prefix}] {
             float: left;
             width: auto !important; 
         }
         
-        .gutters [class*='#{@column-prefix}'], 
-        &.gutters [class*='#{@column-prefix}'] { margin-left: @gutters; }
+        .gutters [class*=@{column-prefix}], 
+        &.gutters [class*=@{column-prefix}] { margin-left: @gutters; }
         
-        .gutters [class*='#{@column-prefix}']:first-child, 
-        &.gutters [class*='#{@column-prefix}']:first-child { margin-left: 0; }
+        .gutters [class*=@{column-prefix}]:first-child, 
+        &.gutters [class*=@{column-prefix}]:first-child { margin-left: 0; }
     }
 }
 
