--- a/css/concise.css
+++ b/css/concise.css
@@ -1230,6 +1230,7 @@ form.border-radius .prepend .adjoined,
 }
 .btn {
   background-color: #ccc;
+  border: 0;
   color: #fff;
   cursor: pointer;
   display: block;
