Change commenting style

--- a/less/_defaults.less
+++ b/less/_defaults.less
@@ -1,26 +1,6 @@
-//------------------------------------//
-//  @BORDER-BOX
-//------------------------------------//
-// Set to `false` if you do not wish to adopt 
-// global `box-sizing: border-box;`
-@global-border-box: true;
-
-
-
-
-//------------------------------------//
-//  @DEBUG
-//------------------------------------//
-// Enabling debug mode allows for potential issues 
-// to be visually displayed in the browser. 
-@debug-mode: false;
-
-
-
-
-//------------------------------------//
-//  @BASE
-//------------------------------------//
+//------------------------------------
+//  BASE
+//------------------------------------
 // Base font sizes and colors
 @base-font-size:    16px;
 @base-line-height:  24px;
@@ -40,9 +20,9 @@
  
 
 
-//------------------------------------//
-//  @RESPONSIVE
-//------------------------------------//
+//------------------------------------
+//  RESPONSIVE
+//------------------------------------
 // Breakpoints
 @extra-small-start: 30em;
 @small-start:       48em;
@@ -53,9 +33,9 @@
 
 
 
-//------------------------------------//
-//  @FONT-SIZES
-//------------------------------------//
+//------------------------------------
+//  FONT-SIZES
+//------------------------------------
 // Font-sizes (in pixels)
 @giga-size: 96px;
 @mega-size: 72px;
@@ -74,9 +54,9 @@
 
 
 
-//------------------------------------//
-//  @COLORS
-//------------------------------------//
+//------------------------------------
+//  COLORS
+//------------------------------------
 // Background colors
 @bg-white:        #ffffff;
 @bg-black:        #222222;
@@ -117,9 +97,9 @@
 
 
 
-//------------------------------------//
-//  @OBJECTS
-//------------------------------------//
+//------------------------------------
+//  OBJECTS
+//------------------------------------
 // Gutter size 
 @gutters: 2%;
 
@@ -140,9 +120,9 @@
 
 
 
-//------------------------------------//
-//  @INCLUDE
-//------------------------------------//
+//------------------------------------
+//  INCLUDE
+//------------------------------------
 // Set whatever components you want included
 // in your project to `true` and any components
 // you do not wish to be included to `false`
