--- a/less/base/_blockquotes.less
+++ b/less/base/_blockquotes.less
@@ -1,7 +1,7 @@
 .blockquotes(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $BLOCKQUOTES
-  //------------------------------------//
+  //------------------------------------
+  //  BLOCKQUOTES
+  //------------------------------------
   blockquote {
     border-left: 1px solid #ddd;
     color: #777;
