--- a/less/base/_container.less
+++ b/less/base/_container.less
@@ -1,7 +1,7 @@
 .container(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $CONTAINER
-  //------------------------------------//
+  //------------------------------------
+  //  CONTAINER
+  //------------------------------------
   .container { width: 90%; }
 
   @media @small { .container { width: 620px; } }
