--- a/less/base/_grid.less
+++ b/less/base/_grid.less
@@ -1,7 +1,7 @@
 .grid(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $GRID
-  //------------------------------------//
+  //------------------------------------
+  //  GRID
+  //------------------------------------
   .row {
     width: 100%;
     
