--- a/less/base/_lists.less
+++ b/less/base/_lists.less
@@ -1,7 +1,7 @@
 .lists(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $LISTS
-  //------------------------------------//   
+  //------------------------------------
+  //  LISTS
+  //------------------------------------   
   ul {
     margin-left: 20px;
     padding-left: 0px;
