--- a/less/base/_selection.less
+++ b/less/base/_selection.less
@@ -1,7 +1,7 @@
 .selection(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $SELECTION
-  //------------------------------------//
+  //------------------------------------
+  //  SELECTION
+  //------------------------------------
   * {
     &::-webkit-selection {
       background-color: @selection-background;
