--- a/less/generic/_clearfix.less
+++ b/less/generic/_clearfix.less
@@ -1,7 +1,7 @@
 .clearfix(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $CLEARFIX
-  //------------------------------------//
+  //------------------------------------
+  //  CLEARFIX
+  //------------------------------------
   .clearfix {
      &:after{
       content: "";
