--- a/less/generic/_conditional.less
+++ b/less/generic/_conditional.less
@@ -1,7 +1,7 @@
 .conditional(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $CONDITIONAL
-  //------------------------------------//
+  //------------------------------------
+  //  CONDITIONAL
+  //------------------------------------
   .show-extra-small, 
   .hide-small, 
   .hide-medium, 
