--- a/less/generic/_print.less
+++ b/less/generic/_print.less
@@ -1,7 +1,7 @@
 .print(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $PRINT
-  //------------------------------------//
+  //------------------------------------
+  //  PRINT
+  //------------------------------------
   @media print {
     @page { margin: 0.5cm; }
 
