--- a/less/generic/_shared.less
+++ b/less/generic/_shared.less
@@ -1,7 +1,8 @@
 .shared(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $SHARED
-  //------------------------------------//
+  //------------------------------------
+  //  SHARED
+  //------------------------------------
+  
   // Declare a common bottom margin for most elements 
   // to maintain a consistent vertical rhythm.
   h1, h2, h3, h4, h5, h6, 
