--- a/less/objects/_breadcrumbs.less
+++ b/less/objects/_breadcrumbs.less
@@ -1,7 +1,7 @@
 .breadcrumbs(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $BREADCRUMBS
-  //------------------------------------//
+  //------------------------------------
+  //  BREADCRUMBS
+  //------------------------------------
   .breadcrumbs {
     .font-size(13px);
     margin: 12px 0;
