--- a/less/objects/_buttons.less
+++ b/less/objects/_buttons.less
@@ -1,7 +1,7 @@
 .buttons(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $BUTTONS
-  //------------------------------------//
+  //------------------------------------
+  //  BUTTONS
+  //------------------------------------
   .btn {
     background-color: #ccc;
     border: 0;
