--- a/less/objects/_colors.less
+++ b/less/objects/_colors.less
@@ -1,7 +1,8 @@
 .colors(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $COLORS
-  //------------------------------------//
+  //------------------------------------
+  //  COLORS
+  //------------------------------------
+  
   // Background colors
   .bg-white { background-color: @bg-white !important; }
 
