--- a/less/objects/_dropdowns.less
+++ b/less/objects/_dropdowns.less
@@ -1,7 +1,7 @@
 .dropdowns(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $DROPDOWNS
-  //------------------------------------//
+  //------------------------------------
+  //  DROPDOWNS
+  //------------------------------------
   .dropdown {
     cursor: pointer;
     outline: none;
