--- a/less/objects/_navigation.less
+++ b/less/objects/_navigation.less
@@ -1,7 +1,7 @@
 .navigation(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $NAVIGATION
-  //------------------------------------//
+  //------------------------------------
+  //  NAVIGATION
+  //------------------------------------
   nav {
     ul {
       list-style: none;
