--- a/less/objects/_wells.less
+++ b/less/objects/_wells.less
@@ -1,7 +1,7 @@
 .wells(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $WELLS
-  //------------------------------------//
+  //------------------------------------
+  //  WELLS
+  //------------------------------------
   .well {
     background-color: #f9f9f9;
     border-color: #ededed;
