--- a/less/base/_forms.less
+++ b/less/base/_forms.less
@@ -1,7 +1,7 @@
 .forms(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $FORMS
-  //------------------------------------//
+  //------------------------------------
+  //  FORMS
+  //------------------------------------
   label { display: block; }
 
   input, 
