--- a/less/base/_headings.less
+++ b/less/base/_headings.less
@@ -1,7 +1,7 @@
 .headings(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $HEADINGS
-  //------------------------------------//
+  //------------------------------------
+  //  HEADINGS
+  //------------------------------------
   h1, h2, h3, h4, h5, h6, 
   .h1, .h2, .h3, .h4, .h5, .h6,
   .giga, .mega, .kilo {
