--- a/less/base/_main.less
+++ b/less/base/_main.less
@@ -1,7 +1,7 @@
 .main(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $MAIN
-  //------------------------------------//
+  //------------------------------------
+  //  MAIN
+  //------------------------------------
   
   // Variables
   @font-size: ((@base-font-size/16px) * 1em);
