--- a/less/base/_tables.less
+++ b/less/base/_tables.less
@@ -1,7 +1,7 @@
 .tables(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $TABLES
-  //------------------------------------//
+  //------------------------------------
+  //  TABLES
+  //------------------------------------
   table {
     &.table {
       empty-cells: show;
