--- a/less/base/_type.less
+++ b/less/base/_type.less
@@ -1,7 +1,8 @@
 .typography(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $TYPE
-  //------------------------------------//
+  //------------------------------------
+  //  TYPE
+  //------------------------------------
+  
   // Links
   a {
     color: @base-link-color; 
