--- a/less/concise.less
+++ b/less/concise.less
@@ -12,9 +12,9 @@
 
 
 
-//------------------------------------//
-//  @CONTENTS
-//------------------------------------//
+//------------------------------------
+//  CONTENTS
+//------------------------------------
 // 
 // CONTENTS
 // IMPORTS
@@ -55,9 +55,9 @@
  
  
 
-//------------------------------------//
-//  @IMPORTS  
-//------------------------------------// 
+//------------------------------------
+//  IMPORTS  
+//------------------------------------ 
 // Generic utility styles
 @import "_defaults.less";
 @import "generic/_mixins.less";
