--- a/less/generic/_helper.less
+++ b/less/generic/_helper.less
@@ -1,7 +1,8 @@
 .helper(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $HELPER
-  //------------------------------------//
+  //------------------------------------
+  //  HELPER
+  //------------------------------------
+  
   // Add/remove floats
   .float-left { float: left !important; }
 
