--- a/less/generic/_normalize.less
+++ b/less/generic/_normalize.less
@@ -1,7 +1,7 @@
 .normalize(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $NORMALIZE  
-  //------------------------------------// 
+  //------------------------------------
+  //  NORMALIZE  
+  //------------------------------------ 
   html {
     font-size: 100%;
     .vendor(text-size-adjust, 100%);
