--- a/less/objects/_badges.less
+++ b/less/objects/_badges.less
@@ -1,7 +1,7 @@
 .badges(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $BADGES
-  //------------------------------------//
+  //------------------------------------
+  //  BADGES
+  //------------------------------------
   .label, 
   .badge {
     background-color: #b5b5b5;
