--- a/less/objects/_groups.less
+++ b/less/objects/_groups.less
@@ -1,7 +1,7 @@
 .groups(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $GROUPS
-  //------------------------------------//
+  //------------------------------------
+  //  GROUPS
+  //------------------------------------
   .group {
     display: inline-block;
     vertical-align: bottom;
