--- a/less/objects/_progress.less
+++ b/less/objects/_progress.less
@@ -1,7 +1,7 @@
 .progress(@boolean) when (@boolean = true) {
-  //------------------------------------//
-  //  $PROGRESS
-  //------------------------------------//
+  //------------------------------------
+  //  PROGRESS
+  //------------------------------------
   .progress {
     background-color: #f9f9f9;
     color: #fff;
