--- a/less/_defaults.less
+++ b/less/_defaults.less
@@ -1,6 +1,13 @@
+// Thanks to inuitcss (https://github.com/csswizardry/inuit.css/blob/master/_defaults.scss) 
+// for the inspiration to create a default file for variables
+
+
+
+
 //------------------------------------
 //  BASE
 //------------------------------------
+
 // Base font sizes and colors
 @base-font-size:    16px;
 @base-line-height:  24px;
@@ -23,6 +30,7 @@
 //------------------------------------
 //  RESPONSIVE
 //------------------------------------
+
 // Breakpoints
 @extra-small-start: 30em;
 @small-start:       48em;
@@ -36,6 +44,7 @@
 //------------------------------------
 //  FONT-SIZES
 //------------------------------------
+
 // Font-sizes (in pixels)
 @giga-size: 96px;
 @mega-size: 72px;
@@ -57,6 +66,7 @@
 //------------------------------------
 //  COLORS
 //------------------------------------
+
 // Background colors
 @bg-white:        #ffffff;
 @bg-black:        #222222;
@@ -100,6 +110,7 @@
 //------------------------------------
 //  OBJECTS
 //------------------------------------
+
 // Gutter size 
 @gutters: 2%;
 
@@ -126,6 +137,10 @@
 // Set whatever components you want included
 // in your project to `true` and any components
 // you do not wish to be included to `false`
+//
+// Thanks to inuitcss (https://github.com/csswizardry/inuit.css/blob/master/_defaults.scss) 
+// for the idea to use feature switches in a framework. It's an absolutely brilliant idea
+// that makes customization so much easier.
 
 
 // Utility
@@ -143,21 +158,22 @@
 @use-blockquotes: true;
 @use-lists:       true;
 @use-tables:      true;
+  @use-table-styles: true;
 @use-forms:       true;
+  @use-form-styles: true;
 @use-grid:        true;
-  // Using push and pull classes for grid
-  // columns takes a lot of code. Set to
-  // `true` if needed.
   @use-push:	  false;
   @use-pull:	  false;
 
   
 // Objects and abstractions
-@use-colors:      true;
+@use-type-colors: true;
+@use-bg-colors:   true;
 @use-buttons:     true;
 @use-groups:      true;
 @use-dropdowns:   true;
 @use-navigation:  true;
+  @use-responsive-navigation: true;
 @use-breadcrumbs: true;
 @use-wells:       true;
 @use-badges:      true;
