--- a/less/base/_grid.less
+++ b/less/base/_grid.less
@@ -35,6 +35,10 @@
     
     
     // Push
+    
+    // Thanks to inuitcss (https://github.com/csswizardry/inuit.css) for the idea to
+    // abstract 'push' and 'pull' into their own mixins. This makes adding/removing
+    // them to projects absolutely painless. 
     .push(@boolean) when (@boolean = true) {
       [class*='push-'] { position: relative; }
       
