--- a/less/generic/_mixins.less
+++ b/less/generic/_mixins.less
@@ -5,6 +5,8 @@
 //  `.font-size(24px, false);`
 //
 //
+// Big thanks to inuitcss for inspiration behind this
+// (https://github.com/csswizardry/inuit.css/blob/master/generic/_mixins.scss)
 .font-size(@font-size, @line-height: true) {
   @px-value: (@font-size);
   @rem-value: (@font-size / @base-font-size) * 1rem;
@@ -28,6 +30,8 @@
 //  `.vendor(border-radius, 4px);`
 //
 //
+// Thanks to inuitcss for this handy mixin
+// (https://github.com/csswizardry/inuit.css/blob/master/generic/_mixins.scss)
 .vendor(@property, @value) {
   -webkit-@{property}: @value;
   -moz-@{property}: @value;
