--- a/less/objects/_navigation.less
+++ b/less/objects/_navigation.less
@@ -262,6 +262,9 @@
   
   .responsive-navigation(@boolean) when (@boolean = true) {
     // Responsive navigation 
+    // 
+    // Thanks to Ben Plum for the great work on his
+    // Naver plugin (https://github.com/benplum/Naver/)
     .naver {
       .naver-handle {
         color: inherit;
